--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -41,3 +41,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation project(':domain')
 }
+
+kapt {
+    generateStubs = true
+}
