--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -34,11 +34,13 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.11'
     implementation 'com.google.dagger:dagger-android-support:2.11'
     kapt 'com.google.dagger:dagger-compiler:2.11'
+    kapt "com.google.dagger:dagger-android-processor:2.11"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     implementation project(':domain')
 }
 
