--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
@@ -27,6 +28,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "io.reactivex.rxjava2:rxjava:2.1.5"
     implementation 'com.google.dagger:dagger:2.11'
